1923/Update index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>你好</title>
+    <title>CDT501 作业网站</title>
 </head>
 
 <body>
-    <h1>欢迎来到这个网站！</h1>
-    <p>这里是一些示例内容。</p>
+    <h1>HongBo Wang的个人网站</h1>
+    <p>computer system</p>
+    <p>artificial intelligence</p>
+    <label for="inputField">请输入你的见解：</label>
+    <input type="text" id="inputField">
 </body>
 
 </html>
