--- a/index.html
+++ b/index.html
@@ -4,10 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <title>CDT501 作业网站</title>
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+        h1, p, label, input {
+            text-align: center;
+        }
+    </style>
 </head>
 
 <body>
-    <h1>HongBo Wang的个人网站</h1>
+    <h1>HongBo Wang 的个人网站</h1>
     <p>computer system</p>
     <p>artificial intelligence</p>
     <label for="inputField">请输入你的见解：</label>
