--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
     <meta charset="UTF-8">
     <title>CDT501 作业网站</title>
     <style>
-        body {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-        }
-        h1, p, label, input {
-            text-align: center;
-        }
-    </style>
+    body {
+        background-color: your_color;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+    }
+</style>
 </head>
 
 <body>
