2305Update index.html

--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <h1>HongBo Wang 的个人网站</h1>
     <p>computer system</p>
     <p>artificial intelligence</p>
+    <nav>
+        <a href="page1.html">页面一</a>
+        <a href="page2.html">页面二</a>
+    </nav>
     <label for="inputField">请输入你的见解：</label>
     <input type="text" id="inputField">
 </body>
